[package]
name = "summer-consensus-algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="rpc-server"
path="src/grpc/server.rs"

[[bin]]
name="rpc-client"
path="src/grpc/client.rs"

[dependencies]
tonic = "0.7.2"
tokio = "1.19.2"

[build-dependencies]
tonic-build = "0.7.2"